add git stuff and metaprovides::package to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ copyright_year   = 2016
 version = 0.005
 
 [@Basic]
+[@Git]
 
 [Prereqs]
 perl                 = 5.016000
@@ -17,6 +18,8 @@ Time::Moment         = 0.38
 Time::Piece          = 1.31
 Time::Zone::Olson    = 0.12
 
+[GitHub::Meta]
 [NextRelease]
 [PkgVersion]
 [PodWeaver]
+[MetaProvides::Package]
