--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ version = 0.013
 [Prereqs]
 perl                 = 5.016000
 overload             = 0
+DateTime::Locale     = 1.06
 Function::Parameters = 1.0705
 Test::More           = 0
 Time::Moment         = 0.38
