--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ version = 0.013
 perl                 = 5.016000
 overload             = 0
 DateTime::Locale     = 1.06
+File::Share          = 0
 Function::Parameters = 1.0705
 Test::More           = 0
 Time::Moment         = 0.38
