--- a/dist.ini
+++ b/dist.ini
@@ -13,8 +13,10 @@ version = 0.013
 perl                 = 5.016000
 overload             = 0
 DateTime::Locale     = 1.06
+Data::Munge          = 0
 File::Share          = 0
 Function::Parameters = 1.0705
+JSON::MaybeXS        = 0
 Test::More           = 0
 Time::Moment         = 0.38
 Time::Piece          = 1.31
