dist.ini: Change to @Starter

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_year   = 2016
 
 version = 0.015
 
-[@Basic]
+[@Starter]
 [@Git]
 
 [Prereqs]
@@ -25,6 +25,3 @@ Time::Zone::Olson    = 0.12
 [NextRelease]
 [PkgVersion]
 [PodWeaver]
-[MetaProvides::Package]
-[MetaJSON]
-[RunExtraTests]
