--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,7 @@ Data::Munge          = 0
 File::Share          = 0
 Function::Parameters = 1.0705
 JSON::MaybeXS        = 0
+List::Util           = 1.45
 Test::More           = 0
 Time::Moment         = 0.38
 Time::Zone::Olson    = 0.12
